--- a/Gardening_Optimization.ipynb
+++ b/Gardening_Optimization.ipynb
@@ -14,10 +14,8 @@
    "metadata": {},
    "source": [
     "\n",
-    "Home owners who have gardens at home, most times do not have an idea of what to crops to grow and what times to grow it. This notebook highlights the best conditions to grow 35 crops. \n",
-    "This notebook analyses 3500 rows of data crop data and analysis conditions such as NPK, humidity, pH, rainfall, and temperature.\n",
-    "\n",
-    "PS: We also find out which season is best to grow which crops."
+    "Homeowners who have gardens at home do not usually have an idea of what crops to grow or when to grow them. This notebook highlights the best conditions to grow 35 crops. This notebook analyzes 3500 rows of crop data and analyzes conditions such as NPK, humidity, pH, rainfall, and temperature.\n",
+    "We also find out which season is best to grow which crops."
    ]
   },
   {
